# tarefas

./: alembic.ini  docker-compose.yml  pyproject.toml
.ci/: docker-compose.yml
alembic/: env.py
app/: Dockerfile  main.py  test_all.py
app/api/routers/: projetos.py  tarefas.py
app/core/: settings.py
app/db/: database.py  session.py
app/migrations/: env.py
