[tool.poetry]
name = "tarefas"
version = "1.3.0"

authors = ["Renef Silva <renefricardo@mail.com>"]
maintainers = ["Renef Silva <renefricardo@mail.com>"]
description = "API para gerenciamento de projetos e tarefas."
readme = "README.md"
homepage = "https://github.com/Renef13/tarefas"
repository = "https://github.com/Renef13/tarefas"
keywords = ["FastAPI", "Tarefas"]


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.4"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
SQLAlchemy = "^1.4.42"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.14.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"
pytest = "^7.4.4"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "unit: mark a test as a unit test.",
    "integration: mark test as an integration test.",
]

[tool.black]
target-version = ["py310"]
line-length = 120

[tool.vulture]
min_confidence = 90
exclude = ["/tests/", "*venv*"]
paths = ["."]

[tool.ruff]
select = ["E", "F", "ERA", "W", "TID", "I", "G", "INP", "T20", "UP", "ISC", "PTH", "SIM", "PLC", "A"]
ignore = ["UP006", "UP007", "A003", "T201", "T203"]
fix = true
line-length = 120
target-version = "py310"
task-tags = ["Example", "todo", "TODO", "FIXME"]
